<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo" 
        android:contentDescription="@string/st_img_desc_logo" 
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/st_top_on_off_button" />

	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="10dp"
	    android:padding="6dp"
	    android:background="@drawable/bt_white"
	    android:orientation="horizontal" >
	
	    <ImageView
	        android:id="@+id/layout_folder_list_item_image"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/st_test_folder_name"
	        android:padding="5dp"
	        android:src="@drawable/np" />
	
        <TextView
            android:id="@+id/layout_folder_list_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:text="text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#0000FF" />
		
	</LinearLayout>
    
    
    <Button
        android:id="@+id/button_top_select_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/st_top_select_theme_button" />

    <Button
        android:id="@+id/button_top_create_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/st_top_create_theme_button" />

    <Button
        android:id="@+id/button_top_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/st_top_download_button" />

</LinearLayout>
